--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 			<button id="play-paper">Papier</button>
 			<button id="play-scissors">Nożyczki</button>
 		</div>
-		<div id="messages">
-			
-
-		</div>
+		<div id="messages"></div>
+		<div id="result"></div>
+		
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
