--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<button id="play-scissors">Nożyczki</button>
 		</div>
 		<div id="messages"></div>
+		<h3>Wynik:</h3>
 		<div id="result"></div>
 		
 	</div>
